; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ocrdma/extr_ocrdma_verbs.c_ocrdma_hwq_head_from_idx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ocrdma/extr_ocrdma_verbs.c_ocrdma_hwq_head_from_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocrdma_qp_hwq_info = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ocrdma_qp_hwq_info*, i32)* @ocrdma_hwq_head_from_idx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ocrdma_hwq_head_from_idx(%struct.ocrdma_qp_hwq_info* %0, i32 %1) #0 {
  %3 = alloca %struct.ocrdma_qp_hwq_info*, align 8
  %4 = alloca i32, align 4
  store %struct.ocrdma_qp_hwq_info* %0, %struct.ocrdma_qp_hwq_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ocrdma_qp_hwq_info*, %struct.ocrdma_qp_hwq_info** %3, align 8
  %6 = getelementptr inbounds %struct.ocrdma_qp_hwq_info, %struct.ocrdma_qp_hwq_info* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.ocrdma_qp_hwq_info*, %struct.ocrdma_qp_hwq_info** %3, align 8
  %10 = getelementptr inbounds %struct.ocrdma_qp_hwq_info, %struct.ocrdma_qp_hwq_info* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = mul nsw i32 %8, %11
  %13 = sext i32 %12 to i64
  %14 = getelementptr i8, i8* %7, i64 %13
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
